
14 June
1. Got the search combo box working a little. History is added etc.

16 June
1. Fixed the bug where the first fitmap in the fontview would draw at an odd y value.
2. Fixed the persistent InfoFontItem issue. Now it goes away when it should.

18 June
1. Many visual fixes. Re-factored the drawing code in Fitmap.
2. Many little fixes like toggle selection menu and multi-selection on/off in the lists.

19 June
1. Gave up on the fancy search dream. FontTools and Panose confuse me horribly. 
   Michael can't help dev at the moment, so it's all back to square one.
   I remarked-out the assistant panel.
2. I got the left and right arrow keys to step through the list - like the buttons do.
3. I (think I) fixed the ESC key to work from anywhere.

20 June
1. Cleaning-up files etc. Lot's of little zipzap commits. Yesterday I merged the branch
   back into the trunk.
2. Caught an encode and decode problem in Folder.__init__. Had to jump through the usual
   unicode hoops to fix it. Hope it is fixed now...
3. Added the licence header to a bunch of files it was missing from.
4. Small fixes to README regarding i18n.
5. Fixing some unicode errors and error dialog boxes.
6. Trying to repair the "lost focus" bug when the main button is clicked -- so far no dice.

22 June
1. Rigged the main button so that focus is not lost on click. It's a hack, but what the heck.

26 June
1. Main button focus issue has a hack-fix
2. Delete multiple pogs at once from the gui.
3. Fixed the help text. Changed the app screenshot.
4. Moved the Purge function out to the File menu. It now applies to the VIEW POG selected.
26 June 
1. Added a test to prevent fonts re-drawing when a new target Pog is clicked.
2. Added help about the Purge menu item.
26 June 
1. Reversed decision to not redraw the target Pog. There are too many subtleties involved for the hammer-and-nail approach I took and I just don't have time to be subtle now. So, it will redraw when you choose another target Pog. Tough.
