@@ -20,7 +20,7 @@
 		<h1>Latest News</h1>
 		<ol>
 			<li>(June 2009) There is an "Include sub-folders" check box now. See also the command-line option "-A"</li>
-			<li>(June 2009) New keyboard shortcuts. Left and Right arrows will step through your fonts.</li>
+			<li>(June 2009) New keyboard shortcuts. Page-up and Page-down will step through your fonts.</li>
 			<li>(June 2009) Multiple Pog selection. Remove, Install or Uninstall many Pogs at once.</li>
 		</ol>
 </TD></tr>
@@ -93,7 +93,7 @@ This is the main <i>action</i> button. It will change it's functionality as you 
 </td></tr>
 <tr><TD valign="top">
 <IMG src="../common/fp7.png.cr.png" align="left" border="0"></TD><td><br>
-These controls, Forward and the Back (shortcut keys Left and Right arrows) allow you to navigate between "pages" of fonts. You can also choose any page from the pull-down. Please go to File->Settings (or hit Ctrl+S -- for English locales) where you can change the number of fonts in a page. <i>I use the paged approach to reduce the memory demands of the app.</i>
+These controls, Forward and the Back (shortcut keys Page-up and Page-down) allow you to navigate between "pages" of fonts. You can also choose any page from the pull-down. Please go to File->Settings (or hit Ctrl+S -- for English locales) where you can change the number of fonts in a page. <i>I use the paged approach to reduce the memory demands of the app.</i>
 </td></tr>
 <tr><TD valign="top">
 <IMG src="../common/fp8.png.cr.png" align="left" border="0"></td><td><br>
@@ -125,7 +125,7 @@ The buttons in this section all act upon the currently selected <strong>target</
 <ol>
 	<li><strong>If shortcut keys don't work</strong>, click in the filter text box. This seems to kick them back to life. Don't ask me what's going on....</li>
 	<li><strong>Esc key</strong> will close your app (and help etc.) quickly.</li>
-	<li><strong>Left and Right arrow keys</strong> will step through fonts like the Next and Previous buttons do.</li>
+	<li><strong>Page up and down keys</strong> will step through fonts like the Next and Previous buttons do.</li>
 	<li><strong>Middle-click (the wheel-button)</strong> in the font view (position 3 above) will open the Settings screen (like Ctrl+S does)</li>
 	<li><strong>Ctrl + Mouse wheel up/down</strong> will increase/decrease the size of your font previews quickly.</li>
 </ol>
